Tue Jun 20 12:04:24 2000  Ossama Othman  <ossama@uci.edu>

	* ace/Makefile (ssl):

	  Reverted change that causes the SSL wrappers to be built when
	  SSL support isn't explicitly disabled.  It caused SSL support to
	  always be built, which was not the desired effect.

Tue Jun 20 12:57:12 2000  Nanbor Wang  <nanbor@cs.wustl.edu>

        * ace/config-freebsd-pthread.h: Undefined ACE_LACKS_SETSCHED if we
          are compiling on R4.0 or above.  Thanks to Sergey A. Osokin
          <osa@freebsd.org.ru> for reporitng this for Nick Logvinov.

Tue Jun 20 07:37:18 2000  Douglas C. Schmidt  <schmidt@tango.cs.wustl.edu>

	* ace/Select_Reactor_T.h,
  	* ace/Select_Reactor_T.cpp,
  	* ace/Reactor.h,
    	* ace/Reactor.i,
    	* ace/Reactor_Impl.h,
	* ace/WFMO_Reactor.h,
  	* ace/WFMO_Reactor.cpp:
	  Added a new method to access the Reactor's timer queue.  Also
 	  renamed the accessors timer_queue(ACE_Timer_Queue *) and
 	  ACE_Timer_Queue *timer_queue() to be more consistent with ACE
 	  naming conventions.  Thanks to Jody Hagins for reporting this.

Tue Jun 20 02:06:15 2000  Craig Rodrigues <crodrigu@bbn.com>

        * include/makeinclude/platform_sunos5_g++.GNU
        * include/makeinclude/platform_sunos5_sunc++.GNU

          Updated PLATFORM_X11_CPPFLAGS to include the standard
          include path for X11 and Motif headers under Solaris.

Mon Jun 19 22:14:26 2000  Alex Arulanthu  <Alex.Arulanthu@sylantro.com>

	* ace/POSIX_Asynch_IO.h:
	* ace/POSIX_Asynch_IO.cpp:
	* ace/POSIX_Proactor.h:
	* ace/POSIX_Proactor.cpp:
	* examples/Reactor/Proactor/Makefile
	* examples/Reactor/Proactor/test_proactor2.cpp:

	  Thanks to Alex Libman <alibman@baltimore.com>, the following
	  changes have been integrated onto POSIX Proactor.

	  - Enabling the completion call backs even if aio_return
	  fails. We will call the completion call back methods with 0
	  transferred data parameter.

	  - MT safe'ing AIOCB proactor. It would not improve the
	  efficiency.
